<resources>
    <array name="gender">
        <item>Male</item>
        <item>Female</item>
    </array>
    <string name="app_name">SoulFit</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="action_settings">Settings</string>
    <string name="cr_workouts_txtView">Workouts</string>
    <string name="cr_done_txtView">DONE</string>
    <string name="cr_done_count">7</string>
    <string name="cr_burned_txtView">BURNED</string>
    <string name="cr_plusSign_btn">+</string>
    <string name="cr_2_mins_txtView">2</string>
    <string name="cr_100Cals_txtView">100 </string>
    <string name="cr_workoutName_txtView">Jumping Rope</string>
    <string name="cr_calBurnedCount_card_txtView">789</string>
    <string name="cr_Workout_Name">Workout Name</string>
    <string name="cr_workout_cal_hint">Calories</string>
    <string name="cr_workout_mins_hint">Minutes</string>

    <string name="cr_add_workout_btn">ADD</string>
    <string name="Day">TODAY</string>
    <string name="ShowCal">658/1500</string>
    <string name="Caloriestxt">CALORIES</string>
    <string name="Breakfasttxt">Breakfast</string>
    <string name="MorningSnackstxt">Morning Snacks</string>
    <string name="Lunchtxt">Lunch</string>
    <string name="Eveningtxt">Evening Snacks</string>
    <string name="Dinnertxt">Dnner</string>
    <string name="BreakfastShow">185</string>
    <string name="MsnackSHow">95</string>
    <string name="Lunchshow">159</string>
    <string name="EveningShow">120</string>
    <string name="DinnerShow">185</string>
    <string name="Food1">"Fresh Milk with sugar"</string>
    <string name="Food2">Omlets</string>
    <string name="Showcal1">85</string>


    <string name="Showcal2">100</string>
    <string name="birthday">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="foot_massage">It\'s oky to estimate, you can update this later</string>
    <string name="submit">submit</string>
    <string name="Topic">Let\'s get started!</string>
    <string name="female">Female</string>

    <string name="male">Male</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="phone_title_text">Phone Number</string>
    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>
    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="register">Register</string>
    <string name="haveAcc">Have an account? Login Here</string>
    <string name="emailAdd">Email</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="facebookLog">Continue with Facebook</string>
    <string name="or">or</string>
    <string name="forgotpass">Forgot password?</string>
    <string name="login">Login</string>
    <string name="samplename">Ben shapiro</string>
    <string name="displayname">Display name</string>
    <string name="entername">Enter your name</string>
    <string name="fburl">fb.me/benshapiro</string>
    <string name="saveProfile">Save</string>
    <string name="twitter">Twitter</string>
    <string name="twitterUrl">twitter.com/ben</string>

    <string name="cr_custom_workouts">Create Workout</string>
    <string name="cr_minutes_hint">Minutes</string>
    <string name="cr_calories_hint">Calories</string>
    <string name="cr_create_workout_btn">Create</string>
    <string name="cr_delete">delete</string>
    <string name="cr_update">update</string>
    <string name="uploadImg">Upload</string>
    <string name="secondEmail">Secondary Email</string>
    <string name="trackYour">Track my</string>
    <string name="viewwork">View my</string>

    <string name="crCalLabel">calories</string>
    <string name="crminslbl">mins</string>

    <string name="upsave">save</string>
    <string name="Upheight">Height</string>
    <string name="Upweight">Weight</string>


</resources>
