<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_green"
    tools:context=".Login">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="228dp"
        android:layout_height="197dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/soulpng"
        app:layout_constraintEnd_toStartOf="@+id/guideline_left"
        app:layout_constraintStart_toStartOf="@+id/guideline_right"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/et_bg"
        android:hint="@string/emailAdd"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColorHint="@color/login_form_details"
        app:layout_constraintEnd_toStartOf="@id/guideline_left"
        app:layout_constraintStart_toStartOf="@id/guideline_right"
        app:layout_constraintTop_toBottomOf="@+id/icon" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/et_bg"
        android:drawableRight="@drawable/ic_eye"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColorHint="@color/login_form_details"
        app:layout_constraintEnd_toStartOf="@id/guideline_left"
        app:layout_constraintStart_toStartOf="@id/guideline_right"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/login_btn"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/login_form_details"
        app:layout_constraintEnd_toStartOf="@+id/guideline_left"
        app:layout_constraintStart_toStartOf="@+id/guideline_right"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/forgotpass"
        android:textColor="@color/login_form_details"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
    <View
        android:id="@+id/footer_Line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="#fff"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="register"
        android:text="@string/create_account"
        android:textColor="@color/login_form_details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/footer_Line" />


    <TextView
        android:id="@+id/facebook_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimary"
        android:drawableStart="@drawable/ic_if_square_facebook"
        android:drawablePadding="8dp"
        android:paddingLeft="5px"
        android:paddingTop="5px"
        android:paddingRight="10px"
        android:paddingBottom="5px"
        android:text="@string/facebookLog"
        android:textColor="@color/login_form_details"
        app:layout_constraintBottom_toTopOf="@+id/footer_Line"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left" />
    <View
        android:id="@+id/line1"
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:background="@color/login_form_details_medium"
        app:layout_constraintStart_toStartOf="@id/guideline_right"
        app:layout_constraintTop_toBottomOf="@id/forgot_password"
        app:layout_constraintBottom_toTopOf="@id/facebook_login"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/login_form_details"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@id/line1"
        app:layout_constraintEnd_toStartOf="@id/line2"
        app:layout_constraintStart_toEndOf="@id/line1"
        app:layout_constraintTop_toTopOf="@id/line2"

        />

    <View
        android:id="@+id/line2"
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:background="@color/login_form_details_medium"
        app:layout_constraintBottom_toTopOf="@id/facebook_login"
        app:layout_constraintEnd_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/forgot_password"
        />

</androidx.constraintlayout.widget.ConstraintLayout>