<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_create">

    <TextView


        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:shadowDy="2"
        android:text="@string/Topic"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHighlight="@color/dark_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />

    <EditText
        android:id="@+id/Birthday"
        android:layout_width="327dp"
        android:layout_height="43dp"
        android:layout_marginTop="168dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_date_range_black_24dp"
        android:drawablePadding="25dp"

        android:ems="10"

        android:hint="@string/birthday"
        android:inputType="textPersonName"
        android:textColorHint="#424949"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/RGender"
        android:layout_width="68dp"
        android:layout_height="28dp"
        android:layout_marginStart="36dp"
        android:text="@string/gender"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.366" />



    <EditText
        android:id="@+id/height"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"

        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="323dp"

        android:drawableStart="@drawable/ic_accessibility_black_24dp"
        android:drawablePadding="25dp"

        android:hint="@string/height"

        android:textColorHint="#424949"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.479"
        android:autofillHints="" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_fitness_center_black_24dp"
        android:drawablePadding="25dp"
        android:ems="10"
        android:hint="@string/weight"
        android:inputType="textPersonName"
        android:textColorHint="#424949"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height"
        app:layout_constraintVertical_bias="0.073" />

    <TextView
        android:id="@+id/textViewR3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        tools:layout_editor_absoluteX="179dp"
        tools:layout_editor_absoluteY="492dp"

        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:text="@string/foot_massage"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight"
        app:layout_constraintVertical_bias="0.148"
        />

    <Button
        android:id="@+id/submit"
        android:layout_width="312dp"
        android:layout_height="47dp"
        android:background="#50c878"


        android:text="@string/submit"


        android:textColor="#c85064"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.616"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.903" />

    <Spinner
        android:id="@+id/spinnergender"
        android:layout_width="154dp"
        android:layout_height="40dp"
        android:entries="@array/gender"
        app:layout_constraintBottom_toTopOf="@+id/height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.788"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Birthday"
        app:layout_constraintVertical_bias="0.494" />

    <Button
        android:id="@+id/UpCrr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.873"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.973" />


</androidx.constraintlayout.widget.ConstraintLayout>


